fix modal z-index

--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -5454,6 +5454,7 @@ button.close {
   .modal-dialog {
     width: 600px;
     margin: 30px auto;
+    z-index: 1040;
   }
   .modal-content {
     -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
